@@ -14,6 +14,7 @@ Luigi Paioro <luigi -at- lambrate -dot- it>
 Roberto Francisco Arroyo Moreno <robfram -at- ugr -dot- es>
 Steve Crane <Steve -dot Crane -at- rococosoft -dot- com>
 Philippe Marschall <philippe -dot- marschall -at- gmail -dot- com>
+Daniel Machado <cdanielmachado -at- gmail -dot- com>
 
 The included Viewer application was originally written by:
 
