@@ -1,22 +1,22 @@
-org.freedesktop.dbus.MessageReader = INFO
-org.freedesktop.dbus.MessageWriter = INFO
+org.freedesktop.dbus.MessageReader = ERR
+org.freedesktop.dbus.MessageWriter = ERR
 org.freedesktop.dbus.Message = ERR
 org.freedesktop.dbus.MethodCall = ERR
 org.freedesktop.dbus.MethodTuple = ERR
-org.freedesktop.dbus.AbstractConnection = VERBOSE
+org.freedesktop.dbus.AbstractConnection = ERR
 org.freedesktop.dbus.AbstractConnection$_thread = ERR
 org.freedesktop.dbus.AbstractConnection$_sender = ERR
 org.freedesktop.dbus.DirectConnection = ERR
-org.freedesktop.dbus.DBusConnection = VERBOSE
+org.freedesktop.dbus.DBusConnection = ERR
 org.freedesktop.dbus.AbstractConnection$1 = ERR
 org.freedesktop.dbus.DBusSignal = ERR
-org.freedesktop.dbus.EfficientQueue = VERBOSE
+org.freedesktop.dbus.EfficientQueue = ERR
 org.freedesktop.dbus.Transport = ERR
 org.freedesktop.dbus.Transport$SASL = ERR
 org.freedesktop.dbus.Transport$SASL$Command = ERR
-org.freedesktop.dbus.Marshalling = ERR
+org.freedesktop.dbus.Marshalling = VERBOSE
 org.freedesktop.dbus.BusAddress = ERR
-org.freedesktop.dbus.RemoteInvocationHandler = VERBOSE
+org.freedesktop.dbus.RemoteInvocationHandler = ERR
 org.freedesktop.dbus.test.cross_test_client = ERR
 org.freedesktop.dbus.bin.DBusDaemon = ERR
 org.freedesktop.dbus.bin.DBusDaemon$DBusServer = ERR
